fix: card slider on mobile devices 2

--- a/css/custom.css
+++ b/css/custom.css
@@ -685,9 +685,12 @@ p strong {
   transition: all 0.2s ease-in-out;
 }
 
+.wo-slider--dragging {
+  touch-action: none;
+}
+
 .wo-slider--dragging .wo-slide {
   transition: none;
-  touch-action: none;
 }
 
 .account {
